tests/tests/snapshots/ts_client__order-system.snap
---
source: tests/tests/ts_client.rs
expression: dump
---
============================================================
clients/ts/package.json
============================================================
{
  "name": "order-system-client",
  "version": "0.1.0",
  "private": true,
  "type": "module",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "scripts": {
    "typecheck": "tsc --noEmit"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}
============================================================
clients/ts/tsconfig.json
============================================================
{
  "compilerOptions": {
    "target": "ES2020",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "lib": ["ES2020", "DOM"]
  },
  "include": ["src"]
}
============================================================
clients/ts/src/types.ts
============================================================
// Generated by CIaC. Record and CRUD schemas from the program's IR.

/** Every `api` route wraps its pipeline's result in this envelope. */
export interface Envelope<T> {
  status: string;
  data: T;
}

export interface Customer {
  id: string;
  name: string;
  email: string;
}

export interface CustomerIn {
  name: string;
  email: string;
}

export interface CustomerOut {
  id: string;
  name: string;
  email: string;
}

export interface Order {
  id: string;
  customer_id: string;
  status: OrderStatus;
  total: number;
}

export interface OrderEvent {
  id: string;
  kind: string;
}

export type OrderStatus = "Pending" | "Shipped" | "Cancelled";

export interface OrderUpdate {
  id: string;
  customer_id: string;
  total: number;
}

export interface SummaryFilter {
  min_total: number;
}

export interface TicketOrder {
  id: string;
}

export interface TooManyRequestsOrder {
  limit: number;
}

============================================================
clients/ts/src/client.ts
============================================================
// Generated by CIaC. One function per route; scope-bearing routes
// require `AuthenticatedClientOptions` so a missing token is a
// compile error, not a 401 at runtime.
import type * as Types from "./types";

export interface ClientOptions {
  baseUrl: string;
}

export interface AuthenticatedClientOptions extends ClientOptions {
  token: string;
}

function authHeader(opts: ClientOptions): Record<string, string> {
  const token = (opts as Partial<AuthenticatedClientOptions>).token;
  return token ? { Authorization: `Bearer ${token}` } : {};
}

async function request<T>(
  opts: ClientOptions,
  path: string,
  method: string,
  body?: unknown,
): Promise<T> {
  const headers: Record<string, string> = { ...authHeader(opts) };
  if (body !== undefined) {
    headers["Content-Type"] = "application/json";
  }
  const res = await fetch(`${opts.baseUrl}${path}`, {
    method,
    headers,
    body: body === undefined ? undefined : JSON.stringify(body),
  });
  if (!res.ok) {
    throw new Error(`${method} ${path} failed: ${res.status}`);
  }
  if (res.status === 204) {
    return undefined as T;
  }
  return (await res.json()) as T;
}

export async function shippedSummaryApi(opts: AuthenticatedClientOptions, payload: Types.SummaryFilter): Promise<Types.Envelope<Types.SummaryFilter>> {
  return request(opts, "/orders/summary/shipped", "POST", payload);
}

export async function markShippedApi(opts: AuthenticatedClientOptions, payload: Types.OrderUpdate): Promise<Types.Envelope<Types.OrderUpdate>> {
  return request(opts, "/orders/mark-shipped", "POST", payload);
}

export async function ingestOrderEvent(opts: ClientOptions, payload: Types.OrderEvent): Promise<Types.Envelope<Types.OrderEvent>> {
  return request(opts, "/orders/webhook", "POST", payload);
}

export async function limitedOrder(opts: ClientOptions, payload: Types.Order): Promise<Types.Envelope<Types.Order>> {
  return request(opts, "/orders/submit", "POST", payload);
}

export async function createCustomer(opts: AuthenticatedClientOptions, payload: Types.CustomerIn): Promise<Types.CustomerOut> {
  return request(opts, "/customers", "POST", payload);
}

export async function listCustomers(opts: AuthenticatedClientOptions, params?: { limit?: number; offset?: number }): Promise<Types.CustomerOut[]> {
  const q = new URLSearchParams();
  if (params?.limit !== undefined) q.set("limit", String(params.limit));
  if (params?.offset !== undefined) q.set("offset", String(params.offset));
  const qs = q.toString();
  return request(opts, qs ? `/customers?${qs}` : "/customers", "GET");
}

export async function getCustomer(opts: AuthenticatedClientOptions, id: string): Promise<Types.CustomerOut> {
  return request(opts, `/customers/{}`.replace("{}", encodeURIComponent(id)), "GET");
}

export async function updateCustomer(opts: AuthenticatedClientOptions, id: string, payload: Types.CustomerIn): Promise<Types.CustomerOut> {
  return request(opts, `/customers/{}`.replace("{}", encodeURIComponent(id)), "PUT", payload);
}

export async function deleteCustomer(opts: AuthenticatedClientOptions, id: string): Promise<void> {
  return request(opts, `/customers/{}`.replace("{}", encodeURIComponent(id)), "DELETE");
}

============================================================
clients/ts/src/index.ts
============================================================
export * from "./types";
export * from "./client";
============================================================
clients/ts/README.md
============================================================
# Generated TypeScript client

Dependency-free (uses the global `fetch`) — generated by `ciac build
--client ts` straight from the program's IR, the same source every
backend renders from. Routes that require auth take
`AuthenticatedClientOptions` instead of `ClientOptions`, so a missing
token is a compile error rather than a 401 at runtime.

```ts
import { createNote, type NoteIn } from "./src";

const opts = { baseUrl: "http://localhost:8000", token: "..." };
const note = await createNote(opts, { title: "hi" } satisfies NoteIn);
```

Run `npm run typecheck` (after `npm install`) to type-check the
package on its own.
